--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 version: '3.8'
+
 services:
   db:
     image: postgres:15
     container_name: video_db
     restart: always
-    environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: video_platform
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
